Fixed worklist to not overflow into the layout and cause a second scrollbar

--- a/src/components/scss/_partials/worklist.scss
+++ b/src/components/scss/_partials/worklist.scss
@@ -20,6 +20,7 @@
   margin-bottom: 1.5rem;
   display: flex;
   position: relative;
+  overflow: hidden;
 }
 
 .work-list__orb{
